--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
+    "firebase": "^9.6.1",
+    "firestore-export-import": "^0.17.0",
     "vue": "^3.0.0",
     "vue-router": "4",
     "vuex": "4"
