--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-tools": "^10.1.0",
     "firestore-export-import": "^0.17.0",
     "global": "^4.4.0",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-router": "4",
