--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VUE_APP_FIREBASE_API_KEY="AIzaSyAvgO9DJirrTCePJpQGG3TmBjwCqIDtD7o"
- VUE_APP_FIREBASE_AUTH_DOMAIN="vueforum-98109.firebaseapp.com"
- VUE_APP_FIREBASE_PROJECT_ID="vueforum-98109"
- VUE_APP_FIREBASE_STORAGE_BUCKET="vueforum-98109.appspot.com"
- VUE_APP_FIREBASE_MESSAGING_SENDER_ID="691482465709"
- VUE_APP_FIREBASE_APP_ID="1:691482465709:web:82573faee75f500fc07d24"
+VITE_FIREBASE_API_KEY="AIzaSyAvgO9DJirrTCePJpQGG3TmBjwCqIDtD7o"
+VITE_FIREBASE_AUTH_DOMAIN="vueforum-98109.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="vueforum-98109"
+VITE_FIREBASE_STORAGE_BUCKET="vueforum-98109.appspot.com"
+VITE_FIREBASE_MESSAGING_SENDER_ID="691482465709"
+VITE_FIREBASE_APP_ID="1:691482465709:web:82573faee75f500fc07d24"
