--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@hennge/vue3-pagination": "^1.0.17",
     "@originjs/vite-plugin-require-context": "^1.0.9",
     "dayjs": "^1.10.4",
     "firebase": "8",
