--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@hennge/vue3-pagination": "^1.0.17",
     "@originjs/vite-plugin-require-context": "^1.0.9",
+    "@vee-validate/i18n": "^4.5.7",
+    "@vee-validate/rules": "^4.5.7",
     "dayjs": "^1.10.4",
     "firebase": "8",
     "firebase-tools": "^10.1.0",
@@ -22,6 +24,7 @@
     "global": "^4.4.0",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
+    "vee-validate": "4",
     "vue": "^3.0.0",
     "vue-router": "4",
     "vuex": "4"
